[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "catz"
version = "0.8.0"
description = "A colourful syntax highlighting tool for your terminal"
authors = [ "Craig Gumbley <craiggumbley@gmail.com>",]
license = "MIT"

[tool.mypy]
[[tool.mypy.overrides]]
module = [ "pygments.*",]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.14.0"
click = "^8.0.3"
click-default-group = "^1.2.2"

[tool.poetry.dev-dependencies]
mock = "^4.0.3"
pre-commit = "^2.15.0"
black = "^21.11b1"
isort = "^5.10.1"
darglint = "^1.8.1"
mypy = "^0.910"
types-setuptools = "^57.4.4"
types-toml = "^0.10.1"
types-mock = "^4.0.4"

[tool.poetry.scripts]
catz = "catz.app:main"
test = "tests.harness:run"
